# jaundice-rate

./: .gitignore  Makefile  README.md  mypy.ini  pyproject.toml
.github/workflows/: pythonapp.yml
deployment/: Dockerfile  docker-compose.yaml
filter/: __init__.py  main.py  text_tools.py
filter/adapters/: html_tools.py  inosmi_ru.py
filter/charged_dict/: positive_words.txt
filter/server/: args.py  encoder.py  middlewares.py  server.py  utils.py
tests/: conftest.py  test_main.py  test_text_tools.py
tests/adapters/: test_inosmi_ru.py
tests/html/: README.md  inosmi.html
tests/server/: test_encoder.py  test_middleware.py  test_server.py  test_utils.py
