[tool.poetry]
name = "filter"
version = "0.1.0"
description = "project for educational purposes"
authors = ["Roman Bolkhovitin <rbolkhovitin@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.6"
pymorphy2 = "^0.8.0"
beautifulsoup4 = "^4.8"
cchardet = "^2.1"
aiodns = "^2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3"
pytest-asyncio = "^0.10.0"
mypy = "^0.750.0"

[tool.poetry.scripts]
filter = "filter.main:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
